# django-sso-template

./: README.md  pyproject.toml  requirements.txt
django_sso_backend/: manage.py
django_sso_backend/authentication/: mixins.py  models.py  serializers.py  urls.py  utils.py  views.py
django_sso_backend/authentication/migrations/: 0001_initial.py
django_sso_backend/authentication/templates/authentication/: login.html
django_sso_backend/django_sso_backend/: asgi.py  settings.py  urls.py  wsgi.py
