[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django_sso_template"
version = "0.0.1"
description = "A template project for performing vanialla SSO with a Django."
license = {text = "MIT License"}
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
